--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -17,6 +17,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "three": "^0.150.1",
+    "three-stdlib": "^2.36.1",
     "valtio": "^1.10.3"
   },
   "devDependencies": {
