--- a/client/package.json
+++ b/client/package.json
@@ -11,22 +11,31 @@
   "dependencies": {
     "@react-three/drei": "^9.58.5",
     "@react-three/fiber": "^8.12.0",
+    "@tabler/icons-react": "^3.35.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.9.4",
+    "lucide-react": "^0.554.0",
     "maath": "^0.5.3",
+    "motion": "^12.23.24",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.150.1",
     "three-stdlib": "^2.36.1",
     "valtio": "^1.10.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
     "vite": "^4.2.0"
   }
 }
